# Mnemos

./: .gitignore  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
.github/: FUNDING.yml
benchmarks/: README.md  cml_fidelity_bench.py  cml_fidelity_corpus.json  cml_fidelity_gpt4o.json  cml_fidelity_gpt4o_mini.json  cml_fidelity_haiku.json  cml_fidelity_llama70b.json  cml_fidelity_minimax.json  cml_fidelity_opus.json  cml_fidelity_qwen3.json  cml_fidelity_sonnet.json  cml_session.py  locomo_bench.py  longmemeval_bench.py  longmemeval_consolidated.py  longmemeval_qa.py  longmemeval_rejudge.py  qa_results_hybrid+rerank_k5_sonnet_opus.json  qa_results_hybrid_k5_gpt4o_gpt4o_cml.json  qa_results_hybrid_k5_sonnet_opus.json  results_hybrid+rerank_session.json  results_hybrid+rerank_session_cml.json  results_hybrid_session.json  results_hybrid_session_cml.json  results_locomo_hybrid+rerank_cml.json  results_locomo_hybrid.json  results_locomo_hybrid_cml.json
docs/: ARCHITECTURE.md  agent-instructions.md  benchmarks.md  cml.md  comparison.md  english-primary.md  features.md  origin.md  philosophy.md  session-hooks.md  usage.md
mnemos/: __init__.py  _resource.py  cemelify.py  cli.py  constants.py  core.py  embed.py  ingest.py  mcp_server.py  nli.py  query.py  rerank.py  splitter.py
scripts/: mnemos-session-hook.sh  mnemos_sortkit.py  split_single_line_cml.py  translate_store_english.py
tests/: conftest.py  test_core.py  test_dedup.py  test_llm_config.py  test_load_embeddings_compat.py  test_splitter.py  test_store.py  test_store_explode.py  test_v1010_backup_safety.py  test_v1014_audit_fixes.py  test_v1016_onnx.py  test_v1017_zero_llm.py  test_v1019_coherence.py  test_v1024_arch_lifecycle.py  test_v103_features.py  (+3 more)
(+16 files in other folders)
